--- a/styles/Loader.module.css
+++ b/styles/Loader.module.css
@@ -1,4 +1,8 @@
-
+.container{
+  width: 100%;
+  height: 100vh;
+  background-color: #1B212C ;
+}
 .logo{
   position: absolute;
   top:50%;
@@ -47,7 +51,7 @@
     fill:transparent;
   }
   to{
-    fill:#FFEEAD;
+    fill:#32C1CD;
   }
 }
 
